[package]
name = "stm-probers"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
serde_yaml = "=0.9.34"
stm32-data-serde = { git = "https://github.com/embassy-rs/stm32-data.git" }
probe-rs-target = { git = "https://github.com/probe-rs/probe-rs.git" }
target-gen = { git = "https://github.com/probe-rs/probe-rs.git" }
